# fake-news-detection

./: APIClient.php  AdminController.php  AuthController.php  NewsController.php  NewsExtractor.php  PHP_PROJECT_STRUCTURE.md  README.md  Submission.php  User.php  admin-dashboard.php  admin_cookies.txt  app-config.php  app.py  cookies.txt  database-config.php  index.php  login.php  models.py  ocr_extract.py  pyproject.toml  register.php  sample_data.sql  schema.sql  web_demo.html
Detect/: README.md  requirements.txt
Detect/app/: __init__.py  admin.py  auth.py  forms.py  models.py  routes.py
Detect/app/static/css/: custom.css
Detect/app/static/js/: script.js
Detect/app/templates/: article_details.html  base.html  history.html  index.html  profile.html  result.html  submit_news.html
Detect/app/templates/admin/: dashboard.html  manage_users.html  reports.html  view_articles.html
Detect/app/templates/auth/: login.html  register.html
Detect/app/templates/errors/: 403.html  404.html  500.html
Detect/app/templates/macros/: _form_macros.html
Detect/app/templates/partials/: _flash_messages.html  _footer.html  _navbar.html
Detect/ml_model/: fake_news_model.pkl  vectorizer.pkl
